# speaker_embedding_ja

./: README.md  hubconf.py  pyproject.toml
models/: ecapatdnn.py  utils.py
